--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "prettier": "^2.8.8",
     "puppeteer-core": "^23.11.1",
     "squoosh": "https://codeload.github.com/discourse/squoosh/tar.gz/dc9649d",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "terser": "^5.37.0",
     "typescript": "^5.7.2"
   },
